--- a/index2.html
+++ b/index2.html
@@ -410,7 +410,7 @@
               <p class="service-card-description">Order your favorite meals to go and savor them wherever you like.</p>
           </div>
           <div class="service-card">
-            <img src="/img/food-delivery-service.webp" alt="Online Delivery">
+            <img src="/img/food-Delivery.jpg" alt="Online Delivery">
             <h2 class="service-card-title">Online Delivery</h2>
             <p class="service-card-description">Get your favorite dishes delivered straight to your doorstep with our reliable online delivery service.</p>
         </div>
