add the our Services link
adding the our services link in navbar which goes to our services section

--- a/index2.html
+++ b/index2.html
@@ -80,6 +80,14 @@
               </li>
               <li class="nav-item">
                 <a
+                  class="nav-link text-light active fs-4"
+                  aria-current="page"
+                  href="#blog"
+                  >Our Services</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
                   class="nav-link text-light active fs-4 me-5"
                   aria-current="page"
                   href="./menu.html"
